--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input type="text" id="numero-etiqueta" name="data[Número de etiqueta]" required>
 
             <label for="data">Data</label>
-            <input class="data" type="date" id="data" name="data[Data]" required>
+            <input class="data" type="date" id="data" placeholder="00/00/0000" name="data[Data]" required>
 
             <label for="horario">Horário</label>
             <select class="horario" id="horario" name="data[Horário]" required>
