--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Formulários Equipamentos</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -29,8 +28,13 @@
             </select>
             <input type="text" id="numero-etiqueta" name="data[Número de etiqueta]" required>
 
-            <label for="data">Data</label>
-            <input class="data" type="date" id="data" placeholder="00/00/0000" name="data[Data]" required>
+            <div class="input-container">
+                <label for="data">Data</label>
+                <div class="input-wrapper">
+                    <input class="data" type="date" id="data" name="data[Data]" required>
+                    <i class="fa-solid fa-calendar"></i>
+                </div>
+            </div>
 
             <label for="horario">Horário</label>
             <select class="horario" id="horario" name="data[Horário]" required>
@@ -47,6 +51,9 @@
                 <option value="Turma D">Turma D</option>
                 <option value="Turma E">Turma E</option>
             </select>
+
+            <label for="relato">Código do relato</label>
+            <input type="text" id="numero-relato" name="data[Relato]" required>
 
             <label for="descricao">Descrição</label>
             <textarea id="descricao" name="data[Descrição]" rows="4" required></textarea>
